# Hyperspec-WGAN

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/base/: parameters.yml
conf/indian_pines/: catalog.yml  parameters.yml
conf/pavia_university/: catalog.yml  parameters.yml
src/: requirements.txt
src/hyperspec_wgan/: __main__.py  cli.py  hooks.py  pipeline_registry.py  settings.py
src/hyperspec_wgan/extras/datasets/: matlab.py  numpy.py
src/hyperspec_wgan/pipelines/data_engineering/: nodes.py  pipeline.py
src/hyperspec_wgan/pipelines/data_science/: nodes.py  pipeline.py
src/hyperspec_wgan/pipelines/data_visualization/: nodes.py  pipeline.py
