[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = "kedro"

[tool.kedro]
package_name = "hyperspec_wgan"
project_name = "hyperspec-wgan"
project_version = "0.17.3"

[tool.poetry]
name = "hyperspec-wgan"
version = "0.2.1"
description = "Data Augmentation using a Generative Adversarial Network for Improved HSI Classification"
authors = ["bhavyamerchant <collaboratory@bnmerchant.com>"]
license = "MIT"

[tool.poetry.dependencies]
kedro = "*"
kedro-viz = {version = "*", optional = true}
python = "~3.8"
scikit-learn = "*"
seaborn = "*"
torch = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pylint = "*"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
good-names = "x, y"
